@@ -1,3 +1,8 @@
+2014-06-26 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.m
+	Escape ' in values used by queryIdentify to identify.
+
 2014-06-07 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m
